// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup and script tag without load() call 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup without load() call 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within existing script tag 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within its own script tag 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="node_modules/@porsche-design-system/components-js/esm/index.mjs"></script>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup with externalDependencies 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="./@porsche-design-system/components-js/esm/index.mjs"></script>
    <script src="node_modules/imask/dist/imask.min.js"></script>
    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup without externalDependencies 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="./@porsche-design-system/components-js/esm/index.mjs"></script>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="node_modules/@porsche-design-system/components-js/esm/index.mjs"></script>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup with externalDependencies 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="node_modules/@porsche-design-system/components-js/esm/index.mjs"></script>
    <script src="node_modules/imask/dist/imask.min.js"></script>
    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup without externalDependencies 1`] = `
<!DOCTYPE html>
<html dir="ltr" lang="en">

  <head>
    <script src="node_modules/@porsche-design-system/components-js/esm/index.mjs"></script>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body>
    Some markup
  </body>

</html>
`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct script 1`] = `
"import * as porscheDesignSystem from './@porsche-design-system/components-js';
window.porscheDesignSystem = porscheDesignSystem;"
`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is not chosen for bug reporting 1`] = `""`;
